--- a/creative-auth-bartender/client/src/styles/ProductCard.css
+++ b/creative-auth-bartender/client/src/styles/ProductCard.css
@@ -24,7 +24,7 @@
 
 .product-card .product-image {
   width: 100%;
-  height: 240px;
+  height: 220px;
   object-fit: cover; /* Crop vertically */
   transition: object-fit 0.3s, height 0.3s;
   background-color: #ffffff !important;
@@ -45,7 +45,7 @@
 }
 
 .product-info {
-  padding: 1rem;
+  padding: 1rem 1rem 2.5rem 1rem;
   display: flex;
   flex-direction: column;
 }
