--- a/creative-auth-bartender/client/src/styles/ShinyText.css
+++ b/creative-auth-bartender/client/src/styles/ShinyText.css
@@ -13,6 +13,23 @@
   animation: shine 5s linear infinite;
 }
 
+.nav-button-text{
+  color:rgba(181, 181, 181, 0.02); /* Adjust this color to change intensity/style */
+  background: linear-gradient(
+    120deg,
+    rgba(50, 7, 7, 0.69) 40%,
+    var(--Old-Brick) 45%,
+    rgba(228, 157, 157, 0.69) 50%,
+    var(--Old-Brick) 55%,
+    rgba(50, 7, 7, 0.69) 60%
+  );
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  display: inline-block;
+  animation: shine 10s linear infinite;
+}
+
 @keyframes shine {
   0% {
     background-position: 100%;
